reports/lekce/02-nelinearni-rce.err.log
Traceback (most recent call last):
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 1269, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\util.py", line 85, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\util.py", line 60, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\asyncio\base_events.py", line 646, in run_until_complete
    return future.result()
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 707, in async_execute
    await self.async_execute_cell(
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 1025, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\jiral\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 919, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
iteraci = 50
a = a0
b = b0

# budeme si prubezne ukladat odhad reseni a chybu odhadu
epsilon = np.zeros((iteraci)) # odhad chyby, tedy delku intervalu <a,b> v jednotlivych krocich
reseni = np.zeros((iteraci)) # aktualni odhad reseni

for i in range(iteraci):
    ## DOPLŇTE ##

koren = reseni[-1] # odhad konecneho reseni
chyba = epsilon[-1] # odhad konecne chyby
------------------

[1;36m  Cell [1;32mIn [4], line 12[1;36m[0m
[1;33m    koren = reseni[-1] # odhad konecneho reseni[0m
[1;37m    ^[0m
[1;31mIndentationError[0m[1;31m:[0m expected an indented block after 'for' statement on line 9

IndentationError: expected an indented block after 'for' statement on line 9 (1685255250.py, line 12)

